@@ -1,6 +1,7 @@
 vendorjsdir = $(THEME_DIR)/_vendor/js
 vendorjs_DATA = \
 	bootstrap.min.js \
+	bugsnag-2.5.0.min.js \
 	jquery.min.js \
 	js.cookie.min.js \
 	mock.js \
